--- a/index.html
+++ b/index.html
@@ -272,11 +272,10 @@
       <div class="event">
          <h2 class="title">How to be on Top 50 Tournament:</h2>
          <ul class="text_item">
-            <li>Only users who use NFT Shoes (including rental shoes) to do activities will be given medals and/or exp
-               points to level up in the tournament.Join activities with NFT Shoes to earn medals and/or tournament exp
+            <li>Join activities with NFT Shoes to earn medals and/or tournament exp
             </li>
             <li>Accumulate tournament exp to level up and receive medal(s) according to each level.</li>
-            <li>Unlock premium pass to have a chance finding more valuable rewards (includes: medals, gacha box)</li>
+         <li>Unlock premium pass to have a chance finding more valuable rewards (includes: medals, gacha box)</li>
          </ul>
       </div>
    </div>
