--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         fill="#55C8FC" />
                   </svg>
                </span>
-               <p>Location: <span>Global</span></p>
+               <p><span>Location: </span>Global</p>
                </p>
             </li>
             <li>
@@ -188,40 +188,21 @@
                         18.5002 15.5 18.5002Z"fill="#55C8FC" />
                   </svg>
                </span>
-               <p>Duration: From <span>Now 14th to Nov 30th</span></p>
+               <p><span>Duration: </span>From 3:00 UTC <span>Now 14th</span> to <span>Nov 30th</span></p>
             </li>
          </ul>
       </div>
       <div class="event">
          <h2 class="title">Prize Pool:</h2>
          <ul class="text_item">
-            <li>Prize Pool = (1) Initial amount <span class="color_primary">2.000.000 HEE</span> sponsored by beFITTER +
-               (2) converted amount from HEE contributed by users purchasing premium pass.</li>
-            <li>beFITTERPrice to unlock premium pass in Tournament is <span class="color_primary">18.000 HEE.</span>
-               Just pay one time.</li>
-            <li>90% of total prize pool (named "Pay Fund") will be paid to Top 50 player. The remaining 10% is the
-               operating cost of the tournament feature.</li>
+            <li>Prize Pool = (1) Initial amount <span class="color_primary">2,000,000 HEE</span> sponsored by beFITTER + (2) Contributed amount of HEE by users who purchase premium pass.</li>
+           <li>90% of total Prize Pool (called "Pay Fund") will be paid to Top 50 players. The remaining 10% is the operating cost of the tournament feature.</li>
          </ul>
       </div>
-      <div class="event">
-
-         <h2 class="title">Conditions:</h2>
-         <ul class="text_item">
-            <li>Only users who use NFT Shoes (including rental shoes) to do activities will be given medals and/or exp
-               points to level up in the tournament.</li>
-            <li>Exp points can only be earned by consuming Energy (integer value). Medal can randomly earn by luck stat
-               of Shoe NFT.</li>
-            <li>Users start from level 0 and try to reach the highest level (level 30).</li>
-            <li>Participants need to unlock the Premium Pass to join the Leaderboard and compete to get HEE rewards from
-               the Pay Fund.</li>
-            <li>Note: Does not apply to the trial shoes.</li>
-         </ul>
-      </div>
-
-
+      
       <div class="Reward">
          <h2 class="title">Leaderboard</h2>
-         <span>Top 50 players who collect the most medals will receive HEE rewards from the <strong>Pay Fund</strong> by
+         <span class="text_item">Top 50 players who collect the most medals will receive HEE rewards from the <strong>Pay Fund</strong> by
             a certain ratio. In detail:</span>
          <ul class="text_item">
             <li class="event">
@@ -237,47 +218,64 @@
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 3:
                   <span class="color_primary">
-                     receive 6,25%
+                     receive 6.25%
                   </span>
                </h2>
             </li>
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 4:
-                  <span class="color_primary">receive 3,13%</span>
+                  <span class="color_primary">receive 3.13%</span>
                </h2>
             </li>
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 5:
-                  <span class="color_primary">receive 2,50%</span>
+                  <span class="color_primary">receive 2.50%</span>
                </h2>
             </li>
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 6 to Top 10:
-                  <span class="color_primary">receive 1,25% per player</span>
+                  <span class="color_primary">receive 1.25% per player</span>
                </h2>
             </li>
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 11 to Top 25:
-                  <span class="color_primary">receive 1,0833% per player</span>
+                  <span class="color_primary">receive 1.0833% per player</span>
                </h2>
             </li>
             <li class="event">
                <h2 style="font-size: 16px; color: #31373E">Top 26 To Top 50:
-                  <span class="color_primary">receive 0,875% per player</span>
+                  <span class="color_primary">receive 0.875% per player</span>
                </h2>
             </li>
          </ul>
 
       </div>
+      <span class="text_item">After the end of the Tournament, beFITTER Team will review the Leaderboard within maximum 5 working days to make sure that there are not any cheating activivities. The HEE rewards shall be added to Spending of the winning players after that.</span>
       <div class="event">
-         <h2 class="title">How to be on Top 50 Tournament:</h2>
+         <h2 class="title">Step by step:</h2>
          <ul class="text_item">
-            <li>Join activities with NFT Shoes to earn medals and/or tournament exp
+            <li>Step 1: Sign up, get a NFT Shoe from the in-app Market or purchase a Shoe Box from Tofu NFT.
             </li>
-            <li>Accumulate tournament exp to level up and receive medal(s) according to each level.</li>
-         <li>Unlock premium pass to have a chance finding more valuable rewards (includes: medals, gacha box)</li>
+            <li>Step 2: Equip your NFT Shoe and join beFITTER activities (Walk/Run/Cycle).</li>
+         <li>Step 3: Medal(s) and/or Exp Point(s) will be randomly distributed at the end of your activity sessions.</li>
+         <li>Step 4: Go to Tournament Tab from your Homepage, claim your Medal(s) as your Free Pass Reward according to your level in the tournament. (Level in the tournament is decided by the Exp Points you have accumulated). You will start from level 0 and try to reach the highest level (level 30).</li>
+         <li>Step 5: Unlock Premium Pass with 18.000 HEE to enter the Leaderboard, earn as many Medal(s) and Gacha Box(es) as your Premium Pass Reward and climb up the Leaderboard.</li>
          </ul>
       </div>
+<div class="event">
+
+         <h2 class="title">Conditions:</h2>
+         <ul class="text_item">
+            <li>Only users who use NFT Shoes (including Rental Shoes) to do activities will be given Medals and/or Exp Point(s) to level up in the tournament.</li>
+               <li>Does not apply to the Trial Shoes.</li>
+            <li>Exp Point(s) can only be earned by consuming Energy (integer value).</li>
+            <li>Medal(s) will be randomly distributed at the end of activity sessions. The Distribution Rate is decided by the Luck Attribute of the NFT Shoe.</li>
+            <li>Participants need to unlock the Premium Pass to join the Leaderboard and compete to get HEE rewards from the Pay Fund.</li>
+         </ul>
+      </div>
+      <p class="text_item" style="margin-top: 16px;margin-bottom: 50px;">By registering to participate in the event, you agree to beFITTER’s terms and conditions. beFITTER Team will reserve the right to disqualify any inappropriate participants. The final decision will rest on the organizer as well.</p>
+
+
    </div>
 </body>
 
